--- a/paramfile_Planck.yaml
+++ b/paramfile_Planck.yaml
@@ -4,16 +4,15 @@ options:
     redshift: './tabulated/redshift.txt'
 
 frequencies:
-  Planck_217:
+  f217:
     units: 'Jy^2'
     eff_freq:
       cib: 217 
     cc: 1.119
-    SN: 16
     emissivity:
       EP_em: './tabulated/em_EP_Planck_217.txt'
       LP_em: './tabulated/em_LP_Planck_217.txt' 
-  Planck_353:
+  f353:
     units: 'Jy^2'
     eff_freq:
       cib: 353 
@@ -22,7 +21,7 @@ frequencies:
     emissivity:
       EP_em: './tabulated/em_EP_Planck_353.txt'
       LP_em: './tabulated/em_LP_Planck_353.txt'  
-  Planck_545:
+  f545:
     units: 'Jy^2'
     eff_freq:
       cib: 545 
@@ -31,7 +30,7 @@ frequencies:
     emissivity:
       EP_em: './tabulated/em_EP_Planck_545.txt'
       LP_em: './tabulated/em_LP_Planck_545.txt'
-  Planck_857:
+  f857:
       units: 'Jy^2'
       eff_freq:
         cib: 857 
@@ -61,13 +60,24 @@ parameters:
     LogMmin_EP: 12.07
     LogMmin_LP: 10.8
   power_spectra:
-    corr01: 1.0
-    corr02: 1.0 
-    corr03: 1.0 
-    corr12: 1.0 
-    corr13: 1.0
-    corr23: 1.0
-    cal0: 1.0
-    cal1: 1.0
-    cal2: 1.0
-    cal3: 1.0
+    shot_noise:
+      SN_f217: 16
+      SN_f353: 225
+      SN_f545: 1454
+      SN_f857: 5628
+    correlations:
+      corr_f217_f217: 1.0
+      corr_f217_f353: 1.0
+      corr_f217_f545: 1.0 
+      corr_f217_f857: 1.0
+      corr_f353_f353: 1.0 
+      corr_f353_f545: 1.0 
+      corr_f353_f857: 1.0
+      corr_f545_f545: 1.0
+      corr_f545_f857: 1.0
+      corr_f857_f857: 1.0
+    calibrations:
+      cal_f217: 1.0
+      cal_f353: 1.0
+      cal_f545: 1.0
+      cal_f857: 1.0
