--- a/paramfile_Planck.yaml
+++ b/paramfile_Planck.yaml
@@ -1,10 +1,13 @@
 options:
-    read_matterPS: True
-    normalization: 0 #if ==0, ps in Cls; if ==1, ps in Dls
+    read_matterPS: False #if True, reads pre-computed linear matter PS
+                        #if False, computes the linear matter PS using CAMB
+    normalization: 0    #if ==0, power spectra in Cls
+                        #if ==1, ps in Dls
     redshift: './tabulated/redshift.txt'
 
+#Features of P14 data
 frequencies:
-  f217:
+  pl_f217:
     units: 'Jy^2'
     eff_freq:
       cib: 217 
@@ -12,30 +15,27 @@ frequencies:
     emissivity:
       EP_em: './tabulated/em_EP_Planck_217.txt'
       LP_em: './tabulated/em_LP_Planck_217.txt' 
-  f353:
+  pl_f353:
     units: 'Jy^2'
     eff_freq:
       cib: 353 
     cc: 1.097
-    SN: 225
     emissivity:
       EP_em: './tabulated/em_EP_Planck_353.txt'
       LP_em: './tabulated/em_LP_Planck_353.txt'  
-  f545:
+  pl_f545:
     units: 'Jy^2'
     eff_freq:
       cib: 545 
     cc: 1.068
-    SN: 1454
     emissivity:
       EP_em: './tabulated/em_EP_Planck_545.txt'
       LP_em: './tabulated/em_LP_Planck_545.txt'
-  f857:
+  pl_f857:
       units: 'Jy^2'
       eff_freq:
         cib: 857 
       cc: 0.995
-      SN: 5628
       emissivity:
         EP_em: './tabulated/em_EP_Planck_857.txt'
         LP_em: './tabulated/em_LP_Planck_857.txt'
@@ -43,7 +43,10 @@ frequencies:
 parameters:
   cosmology:
     T_CMB: 2.725
-    c: 299792458.e-3
+    tau: 0.0544
+    ns: 0.9649
+    As: 2.101e-9
+    pivot_scalar: 0.05
     matter_PS: './tabulated/matterPS_Planck18.txt'
     user_matterPS:
   fixed:
@@ -61,23 +64,23 @@ parameters:
     LogMmin_LP: 10.8
   power_spectra:
     shot_noise:
-      SN_f217: 16
-      SN_f353: 225
-      SN_f545: 1454
-      SN_f857: 5628
+      SN_pl_f217: 16
+      SN_pl_f353: 225
+      SN_pl_f545: 1454
+      SN_pl_f857: 5628
     correlations:
-      corr_f217_f217: 1.0
-      corr_f217_f353: 1.0
-      corr_f217_f545: 1.0 
-      corr_f217_f857: 1.0
-      corr_f353_f353: 1.0 
-      corr_f353_f545: 1.0 
-      corr_f353_f857: 1.0
-      corr_f545_f545: 1.0
-      corr_f545_f857: 1.0
-      corr_f857_f857: 1.0
+      corr_pl_f217_pl_f217: 1.0
+      corr_pl_f217_pl_f353: 1.0
+      corr_pl_f217_pl_f545: 1.0 
+      corr_pl_f217_pl_f857: 1.0
+      corr_pl_f353_pl_f353: 1.0 
+      corr_pl_f353_pl_f545: 1.0 
+      corr_pl_f353_pl_f857: 1.0
+      corr_pl_f545_pl_f545: 1.0
+      corr_pl_f545_pl_f857: 1.0
+      corr_pl_f857_pl_f857: 1.0
     calibrations:
-      cal_f217: 1.0
-      cal_f353: 1.0
-      cal_f545: 1.0
-      cal_f857: 1.0
+      cal_pl_f217: 1.0
+      cal_pl_f353: 1.0
+      cal_pl_f545: 1.0
+      cal_pl_f857: 1.0
